--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -734,7 +734,7 @@ header .navbar ul li a:hover {
 .work .box-container .box img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 .work .box-container .box .content {
   height: 100%;
